@@ -137,86 +137,141 @@ a {
 }
 
 /* -- */
-.image-grid-0 td .image-grid-item-img {
- height:150px !important;
- width:150px !important;
+.image-grid-j td .image-grid-item-img {
+ height:175px !important;
+ width:175px !important;
 }
 
-.image-grid-0 td .image-grid-text {
+.image-grid-j td .image-grid-text {
+ width:158px;
+}
+
+.image-grid-j td .image-grid-item {
+ width:183px;
+ height:235px;
+}
+
+.image-grid-i td .image-grid-item-img {
+ height:170px !important;
+ width:170px !important;
+}
+
+.image-grid-i td .image-grid-text {
+ width:153px;
+}
+
+.image-grid-i td .image-grid-item {
+ width:178px;
+ height:230px;
+}
+.image-grid-h td .image-grid-item-img {
+ height:165px !important;
+ width:165px !important;
+}
+
+.image-grid-h td .image-grid-text {
+ width:148px;
+}
+
+.image-grid-h td .image-grid-item {
+ width:173px;
+ height:225px;
+}
+
+.image-grid-g td .image-grid-item-img {
+ height:160px !important;
+ width:160px !important;
+}
+
+.image-grid-g td .image-grid-text {
+ width:143px;
+}
+
+.image-grid-g td .image-grid-item {
+ width:168px;
+ height:220px;
+}
+
+.image-grid-f td .image-grid-item-img {
+ height:155px !important;
+ width:155px !important;
+}
+
+.image-grid-f td .image-grid-text {
  width:138px;
 }
 
-.image-grid-0 td .image-grid-item {
- width:158px;
- height:210px;
+.image-grid-f td .image-grid-item {
+ width:163px;
+ height:215px;
 }
 
-.image-grid-324 td .image-grid-item-img {
+.image-grid-e td .image-grid-item-img {
  height:145px !important;
  width:145px !important;
 }
 
-.image-grid-324 td .image-grid-text {
+.image-grid-e td .image-grid-text {
  width:133px;
 }
 
-.image-grid-324 td .image-grid-item {
+.image-grid-e td .image-grid-item {
  width:153px !important;
  height:205px !important;
 }
 
-.image-grid-314 td .image-grid-item-img {
+.image-grid-d td .image-grid-item-img {
  height:140px !important;
  width:140px !important;
 }
 
-.image-grid-314 td .image-grid-text {
+.image-grid-d td .image-grid-text {
  width:128px;
 }
 
-.image-grid-314 td .image-grid-item {
+.image-grid-d td .image-grid-item {
  width:148px !important;
  height:200px !important;
 }
 
-.image-grid-304 td .image-grid-item-img {
+.image-grid-c td .image-grid-item-img {
  height:135px !important;
  width:135px !important;
 }
 
-.image-grid-304 td .image-grid-text {
+.image-grid-c td .image-grid-text {
  width:123px;
 }
 
-.image-grid-304 td .image-grid-item {
+.image-grid-c td .image-grid-item {
  width:143px !important;
  height:195px !important;
 }
 
-.image-grid-294 td .image-grid-item-img {
+.image-grid-b td .image-grid-item-img {
  height:130px !important;
  width:130px !important;
 }
 
-.image-grid-294 td .image-grid-text {
+.image-grid-b td .image-grid-text {
  width:118px;
 }
 
-.image-grid-294 td .image-grid-item {
+.image-grid-b td .image-grid-item {
  width:138px !important;
  height:190px !important;
 }
 
-.image-grid-284 td .image-grid-item-img {
+.image-grid-a td .image-grid-item-img {
  height:125px !important;
  width:125px !important;
 }
 
-.image-grid-284 td .image-grid-text {
+.image-grid-a td .image-grid-text {
  width:113px;
 }
 
-.image-grid-284 td .image-grid-item {
+.image-grid-a td .image-grid-item {
  width:133px !important;
  height:185px !important;
 }
