@@ -20,6 +20,7 @@
     player menu item, to still be accessible.
 16. Minfiy each JS file, as opposed to combining into one, as otherwise the
     speed of scrolling large lists is affected.
+17. More grid sizes (every 5px from 125px to 175px)
 
 0.6.0
 -----
